language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_annotation.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_annotation.move:2:20 ───
   │
 7 │         ignore(abort 0: CupC<R>);
   │                         ^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.R' does not satisfy the constraint 'copyable'
   ·
 4 │     resource struct R {}
   │     -------- The type's constraint information was declared here
   ·
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

